INBOX-556 fix scrollbar sidebar can be catch

--- a/modules/linagora.esn.unifiedinbox/frontend/css/modules/aside.less
+++ b/modules/linagora.esn.unifiedinbox/frontend/css/modules/aside.less
@@ -91,12 +91,12 @@
 @media(min-width: @screen-md-min) {
   .inbox-aside {
     position: fixed;
-    width: inherit;
+    width: 23%;
     overflow: hidden;
-    padding-right: 30px;
 
     &:hover {
       overflow-y: auto;
+      width: 24%;
     }
 
     top: ~"calc(@{header-height} + @{sub-header-height})";
@@ -208,3 +208,16 @@
     }
   }
 }
+
+@media(min-width: @screen-xl-min) {
+  .inbox-aside {
+    position: fixed;
+    width: 14.66666667%;
+
+    &:hover {
+      overflow-y: auto;
+      width: 15.66666667%;
+    }
+  }
+}
+
